Add homework User.