@@ -1,37 +1,33 @@
 package com.kodilla.stream;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class UsersManager {
 
-    public static List<String> filterChemistGroupUsernames() {
-        return UsersRepository.getUsersList()
-                .stream()
-                .filter(user -> "Chemists".equals(user.getGroup()))
-                .map(User::getUsername)
-                .collect(Collectors.toList());
+    private List<User> users;
+
+    public UsersManager(List<User> users) {
+        this.users = users;
     }
 
-    public static List<User> filterUsersOlderThan(int age) {
-        return UsersRepository.getUsersList()
-                .stream()
+    public List<User> filterUsersOlderThan(int age) {
+        return users.stream()
                 .filter(user -> user.getAge() > age)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public static List<User> filterUsersWithManyPosts(int minPosts) {
-        return UsersRepository.getUsersList()
-                .stream()
-                .filter(user -> user.getNumberOfPost() > minPosts) // albo getNumberOfPosts()
-                .collect(Collectors.toList());
+    public List<String> filterChemistGroupUsernames() {
+        return users.stream()
+                .filter(user -> user.getGroup().equals("Chemists"))
+                .map(User::getUsername)
+                .toList();
     }
-    public static List<String> filterActiveChemistsUsernames(int minPosts) {
-        return UsersRepository.getUsersList()
-                .stream()
-                .filter(user -> "Chemists".equals(user.getGroup()))
+
+    public List<String> filterActiveChemistsUsernames(int minPosts) {
+        return users.stream()
+                .filter(user -> user.getGroup().equals("Chemists"))
                 .filter(user -> user.getNumberOfPost() > minPosts)
                 .map(User::getUsername)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
